bump java and spring boot version